fix filter options z-index

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -196,7 +196,7 @@ body
   height: auto
   max-height: 300px
   overflow: hidden
-  z-index: 100
+  z-index: 300
   border-radius: 1em
   padding: 1em
   opacity: 0
